// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Pagination Item active 1`] = `
.c1:first-child .c4 {
  margin-left: 0;
  border-bottom-left-radius: 0.25rem;
  border-top-left-radius: 0.25rem;
}

.c1:last-child .c4 {
  border-bottom-right-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c1 .c4 {
  z-index: 2;
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
}

.c2 .c0:first-child .c4 {
  border-bottom-left-radius: .3rem;
  border-top-left-radius: .3rem;
}

.c2 .c0:last-child .c4 {
  border-bottom-right-radius: .3rem;
  border-top-right-radius: .3rem;
}

.c3 .c0:first-child .c4 {
  border-bottom-left-radius: .2rem;
  border-top-left-radius: .2rem;
}

.c3 .c0:last-child .c4 {
  border-bottom-right-radius: .2rem;
  border-top-right-radius: .2rem;
}

<li
  className="c0 c1"
/>
`;

exports[`Create Pagination Item disabled 1`] = `
.c1:first-child .c4 {
  margin-left: 0;
  border-bottom-left-radius: 0.25rem;
  border-top-left-radius: 0.25rem;
}

.c1:last-child .c4 {
  border-bottom-right-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c1 .c4 {
  color: #6c757d;
  pointer-events: none;
  background-color: #fff;
  border-color: #dee2e6;
}

.c2 .c0:first-child .c4 {
  border-bottom-left-radius: .3rem;
  border-top-left-radius: .3rem;
}

.c2 .c0:last-child .c4 {
  border-bottom-right-radius: .3rem;
  border-top-right-radius: .3rem;
}

.c3 .c0:first-child .c4 {
  border-bottom-left-radius: .2rem;
  border-top-left-radius: .2rem;
}

.c3 .c0:last-child .c4 {
  border-bottom-right-radius: .2rem;
  border-top-right-radius: .2rem;
}

<li
  className="c0 c1"
  disabled={true}
/>
`;

exports[`Default Pagination 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  list-style: none;
  border-radius: 0.25rem;
}

<ul
  className="c0"
/>
`;

exports[`Pagination large 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  list-style: none;
  border-radius: 0.25rem;
}

.c0 .c1 {
  padding: .75rem 1.5rem;
  font-size: 1.25rem;
}

.c0 .c2:first-child .c1 {
  border-bottom-left-radius: .3rem;
  border-top-left-radius: .3rem;
}

.c0 .c2:last-child .c1 {
  border-bottom-right-radius: .3rem;
  border-top-right-radius: .3rem;
}

<ul
  className="c0"
  size="large"
/>
`;

exports[`Pagination large 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  list-style: none;
  border-radius: 0.25rem;
}

.c0 .c1 {
  padding: .25rem .5rem;
  font-size: .875rem;
}

.c0 .c2:first-child .c1 {
  border-bottom-left-radius: .2rem;
  border-top-left-radius: .2rem;
}

.c0 .c2:last-child .c1 {
  border-bottom-right-radius: .2rem;
  border-top-right-radius: .2rem;
}

<ul
  className="c0"
  size="small"
/>
`;
